What's New in Python 2.2.4?
Release date: XX-XXX-XXXX
===========================

- Fixed a bug in the cache of length-one Unicode strings that could
  lead to a seg fault.  The specific problem occurred when an earlier,
  non-fatal error left an uninitialized Unicode object in the
  freelist.

- The email package handles some RFC 2231 parameters with missing
  CHARSET fields better.  It also includes a patch to parameter
  parsing when semicolons appear inside quotes.

- SF #746304: Builtin functions are now copy.[deep]copyable.
  Classes are now also deepcopyable.

- SF #753592: webchecker/wsgui now handles user supplied directories.

- SF bug 763023: fix uncaught ZeroDivisionError in difflib ratio methods
  when there are no lines.

- SF bug 753451: classmethod checks that it's argument is callable.

What's New in Python 2.2.3 (final) ?
Release date: 30-May-2003
====================================

- SF #745055: Fix memory leaks in Tkapp_Split and Tkapp_SplitList.

- On Posix systems, as of Python 2.2, the arguments for
  socket.socket() default to AF_INET, SOCK_STREAM.  This is now so for
  the Windows-specific wrapper in socket.py as well.

- Backport SF #736892: Add argument sanity checking for __get__().

- SF #742911: Fix segfault due to clearing weak references too late
  for new-style class instances.

- Backport SF 742860: new, improved __delitem__ for WeakKeyDictionary.
  The old __delitem__ wasn't threadsafe, was very inefficient (expected
  time O(len(dict)) instead of O(1)), and could raise a spurious
  RuntimeError if another thread mutated the dict during __delitem__, or if
  a comparison function mutated it.  It also neglected to raise KeyError
  when the key wasn't present; didn't raise TypeError when the key wasn't
  of a weakly referencable type; and broke various more-or-less obscure
  dict invariants by using a sequence of equality comparisons over the
  whole set of dict keys instead of computing the key's hash code to